# disk-catalogue

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_cataloguing.md  README_git.md  RELEASE_NOTES_v0.1.2.md  SCHEMA_REFERENCE.md  SCHEMA_REFERENCE_20250914.md  build.md  commit-template.txt  drive_manifest.csv  drive_manifest.template.csv  duckdb_schema.sql  pyproject.toml  ruff.toml  sample_queries.sql
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
eval/: following_jesus_gold_questions.json
postmortem-public/: AGENTS.md
postmortem-public/wiki/: conversation-summary.md  decisions.md  graph.md  index.md  methodology.md  navigation.md  postmortem.md  repository-evidence.md  surrogates.md  timeline.md
scripts/: catalogue_following_jesus_semantic.py  container_extract_photos_from_list.sh  container_extract_videos_from_list.sh  container_scan_files.sh  container_scan_photos.sh  container_scan_videos.sh  enrich_checksums.sh  example.sh  generate_schema_reference.py  lint.sh  load_csvs.py  make_manifest.py  plan_following_jesus_rename.py  rename_following_jesus_files.py  run_sql.sh  run_tests.sh  scan_and_ingest.py  scan_summary.py  validate_following_jesus_rename.py  validate_schema.py
skills/assistant-postmortem-wiki/: SKILL.md
tests/: test_audio_semantic.py  test_build_assistant_postmortem.py  test_following_jesus_rename.py  test_sample_queries.py  test_scanner.py  test_scanner_extra.py  test_semantic_audio.py
tools/: build_assistant_postmortem.py
(+310 files in other folders)
